# CNN_JC

./: .~lock.f_hhh_results.csv#  FridaysAndExpirations.csv  README.md  datagen.typ  f_hhh_results.csv  fridays.m  garch.typ  main.py  mc  pseudo.typ  pseudo_code.m  pyproject.toml  pytorch-testing-example.py  results  summary.typ  thesis.typ
ForwardANN/: ANN.py  ANN2.py  American.py  Day1.csv  Day1.h5  Day2.csv  Day2.h5  Day3.csv  Day3.h5  Day4.csv  Day4.h5  Day5.csv  Day5.h5  Day_test2.csv  Day_test3.csv  Day_test5.csv  GARCH_CALIBRATION_README.md  KS.py  MODEL_IMPROVEMENTS.md  NEURAL_CALIBRATION_README.md  advanced_training.py  am_ann.py  ann.dot  batch_epoch_man.py  best_model_checkpoint.pt  combined.py  combined_s0.csv  dataset.py  debug_american.py  earlystop.py  epochman.py  epochs_metrics.csv  garch_calibration.py  historical.py  hyperparameter_metrics.csv  impl_demo_improved.csv  impvol.py  log_dataset.py  log_training.py  loss.py  (+41 more)
ForwardANN/data/: Day1_call.csv  Day1_put.csv  Day2_call.csv  Day2_put.csv
ForwardANN/results/trial_1/: call1_Day1_20241118_154627.csv  call1_Day1_20241118_181725.csv  call1_Day1_20241118_181900.csv  call1_Day2_20241118_182145.csv  call1_Day2_20241118_182249.csv  call1_Day3_20241118_182652.csv  call1_Day3_20241118_182840.csv  call1_Day4_20241118_183007.csv  call1_Day4_20241118_183227.csv  call1_Day5_20241118_183434.csv  call1_Day5_20241118_183509.csv  put1_Day1_20241118_161243.csv  put1_Day1_20241118_181843.csv  put1_Day1_20241118_182059.csv  put1_Day1_20241118_192219.csv  put1_Day2_20241118_182232.csv  (+7 more)
ForwardANN/test/: test.py
(+519 files in other folders)
