[tool.poetry]
name = "cnn-jc"
version = "0.1.0"
description = ""
authors = ["Mustafif  <mustafif0929@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
keras = "^3.3.3"
numpy = "^1.26.4"
dill = "^0.3.8"
joblib = "^1.4.2"
pandas = "^2.2.2"
arch = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
