[tool.poetry]
name = "cnn-jc"
version = "0.1.0"
description = ""
authors = ["Mustafif  <mustafif0929@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
dill = "^0.3.8"
joblib = "^1.4.2"
pandas = "^2.2.2"
arch = "^7.0.0"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
scipy = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
