[tool.poetry]
name = "forwardann"
version = "0.1.0"
description = ""
authors = ["Mustafif <mustafif0929@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.3"
pandas = "^2.2.3"
keras = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
